# Game_Engine_OpenGl

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeLists2.txt  CMakeSettings.json  Game_Engine_UML.drawio  README.md
GameEngine/: GameEngine.sln
GameEngine/Dependencies/GLFW/lib/: glfw3.lib
GameEngine/GameEngine/: GameEngine.vcxproj  GameEngine.vcxproj.filters  imgui.ini
GameEngine/GameEngine/Debug/: vc143.idb
GameEngine/GameEngine/Debug/GameEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GameEngine.lastbuildstate
GameEngine/GameEngine/include/: CMakeLists.txt  Camera.h  Texture.h
GameEngine/GameEngine/include/IO/: InputHandler.h
GameEngine/GameEngine/include/objects/: CMakeLists.txt
GameEngine/GameEngine/res/shaders/: Basic.shader  LightCube.shader  LightningShader.shader  Sphere.shader
GameEngine/GameEngine/src/: Application.cpp  CMakeLists.txt  Camera.cpp  Camera.h  Cube.cpp  Cube.h  EBO.cpp  EBO.h  Mesh.cpp  Mesh.h  Pyramid.cpp  Pyramid.h  RenderObject.h  Renderer.cpp  Renderer.h  Rendering.h  Shader.cpp  Shader.h  Sphere.cpp  Sphere.h  Texture.cpp  Texture.h  VAO.cpp  VAO.h  VBL.h  VBO.cpp  VBO.h  glad.c  main.cpp
GameEngine/GameEngine/src/IO/: InputHandler.cpp
GameEngine/GameEngine/src/objects/: CMakeLists.txt  Cube.cpp  Cube.h  Cuboid.cpp  Cuboid.h  Pyramid.cpp  Pyramid.h  Solid.h  Sphere.h
GameEngine/GameEngine/src/tests/: CMakeLists.txt  TestClearColor.cpp
GameEngine/GameEngine/x64/Debug/: GameEngine.exe.recipe  GameEngine.ilk  main.obj.enc  vc143.idb
GameEngine/GameEngine/x64/Debug/GameEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  GameEngine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
GameEngine/Libraries/include/glad/: glad.h
GameEngine/Libraries/lib/: glfw3.lib
GameEngine/include/: CMakeLists.txt  Calculations.h  EBO.h  GuiHandler.h  Mesh.h  MeshFactory.h  MeshRegistry.h  MeshUpdater.h  Model.h  ModelManager.h  Renderer.h  RenderingManager.h  Shader.h  SystemUtils.h  Texture.h  TextureManager.h  Utils.h  VBL.h  VBO.h  temp.h
GameEngine/include/IO/: CMakeLists.txt  FileHandler.h  InputHandler.h
GameEngine/include/factories/: CMakeLists.txt  ConeFactory.h  CubeFactory.h  CuboidFactory.h  CylinderFactory.h  IObjectFactory.h  MeshFactory.h  ObjectFactory.h  PyramidFactory.h  SphereFactory.h  TorusFactory.h
GameEngine/include/objects/: Cone.h  Cube.h  Cuboid.h  Cylinder.h  Pyramid.h  Solid.h  Sphere.h  Torus.h
GameEngine/include/tests/: CMakeLists.txt
GameEngine/src/: CMakeLists.txt  Calculations.cpp  Camera.cpp  EBO.cpp  GuiHandler.cpp  Mesh.cpp  MeshFactory.cpp  MeshRegistry.cpp  MeshUpdated.cpp  Model.cpp  ModelManager.cpp  Renderer.cpp  RenderingManager.cpp  Shader.cpp  Texture.cpp  TextureManager.cpp  Utils.cpp  VAO.cpp  VBO.cpp  main.cpp  temp.cpp
GameEngine/src/IO/: CMakeLists.txt  FileHandler.cpp  InputHandler.cpp
GameEngine/src/factories/: CMakeLists.txt  MeshFactory.cpp  ObjectFactory.cpp
GameEngine/src/objects/: Cone.cpp  Cube.cpp  Cuboid.cpp  Cylinder.cpp  Pyramid.cpp  Solid.cpp  Sphere.cpp  Torus.cpp
GameEngine/src/tests/: CMakeLists.txt  FactoriesTest.cpp  ManagerTest.cpp  MeshRegistryTest.cpp  ObjectFactoryTest.cpp  test.cpp
assets/models/monkeyHead/: monkeyHead.mtl
assets/shaders/: Basic.shader  CustomModel.shader  LightCube.shader  LightningShader.shader  Sphere.shader
docs/: README.md
